--- a/third_page.html
+++ b/third_page.html
@@ -7,8 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	
+    <div>
 
+    </div>
+
+    <div>
+    <a href="first_page.html">Первая страница</a>
+    <a href="second_page.html">Вторая страница</a>
+    <a href="index.html">Главная страница</a>
+    </div>
     <script src="dom.js"></script>
 </body>
 </html>
