--- a/third_page.html
+++ b/third_page.html
@@ -16,6 +16,6 @@
     <a href="second_page.html">Вторая страница</a>
     <a href="index.html">Главная страница</a>
     </div>
-    <script src="dom.js"></script>
+    <script src="third_page.js"></script>
 </body>
 </html>
