--- a/second_page.html
+++ b/second_page.html
@@ -16,6 +16,6 @@
     <a href="index.html">Главная страница</a>
     <a href="third_page.html">Третья страница</a>
     </div>
-    <script src="dom.js"></script>
+    <script src="second_page.js"></script>
 </body>
 </html>
