Add funsction saveToTable for second page

--- a/second_page.html
+++ b/second_page.html
@@ -52,6 +52,25 @@
 	</div>
 
     <div>
+	
+	<div>
+		<p><button id="saveButton">Записать в таблицу</button></p>
+	</div>
+	<div>
+		<p><table id="dataTable">
+			<tr>
+				<th>ЖКХ</th>
+				<th>Продукты</th>
+				<th>Одежда</th>
+				<th>Техника</th>
+				<th>Обучение</th>
+				<th>Развлечения</th>
+				<th>Путешествия</th>
+				<th>Транспорт</th>
+			</tr>
+		</table>
+		</p>
+	</div>
     </br></br>
     <a href="first_page.html">Первая страница</a>
     <a href="index.html">Главная страница</a>
