Reorganisation file and directories

--- a/second_page.html
+++ b/second_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Вторая страница</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="piechart"></div>
@@ -77,6 +77,6 @@
     <a href="third_page.html">Третья страница</a>
     </div>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script src="second_page.js"></script>
+    <script src="js/second_page.js"></script>
 </body>
 </html>
