--- a/first_page.html
+++ b/first_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Первая страница</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div>
@@ -62,6 +62,6 @@
     <a href="second_page.html">Вторая страница</a>
     <a href="third_page.html">Третья страница</a>
     </div>
-    <script src="first_page.js"></script>
+    <script src="js/first_page.js"></script>
 </body>
 </html>
