--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div>
@@ -16,6 +16,6 @@
     <a href="second_page.html">Вторая страница</a>
     <a href="third_page.html">Третья страница</a>
     </div>
-    <script src="dom.js"></script>
+    
 </body>
 </html>
