--- a/third_page.html
+++ b/third_page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Третья страница</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -106,7 +106,7 @@
         <a href="second_page.html">Вторая страница</a>
         <a href="index.html">Главная страница</a>
     </div>
-    <script src="third_page.js"></script>
+    <script src="js/third_page.js"></script>
 </body>
 
 </html>
